syntax = "proto3";

import "frameData.proto";

option optimize_for = LITE_RUNTIME;

message clipData_proto
{
	optional uint32 count = 1;
	repeated frameData_proto frames = 2;
}